// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a closed dropdown 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-8 {
  display: inline-block;
}

.emotion-3:focus {
  outline: none;
}

.emotion-5 {
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  z-index: 2;
  top: 0px;
  left: 0px;
}

.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-0 > div:focus {
  outline: none;
}

.emotion-0:focus > div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio:0) {
  .emotion-0:focus > div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

.emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-2 {
  padding: 16px;
}

.emotion-1 {
  background-repeat: no-repeat;
  padding: 16px;
}

<NonMenuDropdown
  data-cy="nonMenuDropdown"
  trigger="Dropdown trigger"
>
  <div
    className="emotion-8"
  >
    <Dropdownable
      dropdown={
        <Popover
          data-cy="nonMenuDropdown"
          id="dropdown1"
          role="dialog"
        >
          <FocusLockCombination
            disabled={true}
          >
            <div
              className="emotion-3"
              tabIndex={-1}
            >
              <SpacingBox
                side="all"
                spacingSize="m"
                tag="div"
              >
                <div>
                  dropdown content
                </div>
              </SpacingBox>
            </div>
          </FocusLockCombination>
        </Popover>
      }
      open={false}
      preferredDirections={
        Array [
          "bottom-left",
          "bottom-right",
          "top-right",
          "top-left",
        ]
      }
    >
      <div
        className="emotion-7"
      >
        <div>
          <ResetButton
            aria-expanded={false}
            aria-owns="dropdown1"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-owns="dropdown1"
              className="emotion-0"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <div
                tabIndex={-1}
              >
                Dropdown trigger
              </div>
            </button>
          </ResetButton>
        </div>
        <Overlay
          className="emotion-5"
          overlayRoot={
            .emotion-1:focus {
  outline: none;
}

.emotion-3 {
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  z-index: 2;
  top: 0px;
  left: 0px;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  background-repeat: no-repeat;
  padding: 16px;
}

<body>
              <div>
                <div
                  class="emotion-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-2"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown1"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-1"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-0"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="emotion-5"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-4"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown1"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <div
              className="emotion-5"
            >
              <div
                className=""
              >
                <clickOutside(DropdownContents)
                  open={false}
                >
                  <DropdownContents
                    open={false}
                  >
                    <Popover
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown1"
                      role="dialog"
                    >
                      <div
                        className="emotion-4"
                        data-cy="nonMenuDropdown"
                        direction="bottom-left"
                        id="dropdown1"
                        role="dialog"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <FocusLockCombination
                          disabled={true}
                        >
                          <FocusLock
                            as="div"
                            autoFocus={true}
                            disabled={true}
                            lockProps={Object {}}
                            noFocusGuards={false}
                            persistentFocus={false}
                            returnFocus={false}
                            sideCar={[Function]}
                          >
                            <div
                              data-focus-guard={true}
                              key="guard-first"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                            <div
                              data-focus-guard={true}
                              key="guard-nearest"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                            <div
                              data-focus-lock-disabled="disabled"
                              onBlur={[Function]}
                              onFocus={[Function]}
                            >
                              <div
                                className="emotion-3"
                                tabIndex={-1}
                              >
                                <SpacingBox
                                  side="all"
                                  spacingSize="m"
                                  tag="div"
                                >
                                  <Box
                                    bgImageOptions={
                                      Object {
                                        "position": undefined,
                                        "repeat": undefined,
                                        "size": undefined,
                                      }
                                    }
                                    className="emotion-2"
                                    dataCy="spacingBox"
                                    tag="div"
                                  >
                                    <div
                                      className="emotion-1"
                                      data-cy="spacingBox"
                                    >
                                      <div>
                                        dropdown content
                                      </div>
                                    </div>
                                  </Box>
                                </SpacingBox>
                              </div>
                            </div>
                            <div
                              data-focus-guard={true}
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                          </FocusLock>
                        </FocusLockCombination>
                      </div>
                    </Popover>
                  </DropdownContents>
                </clickOutside(DropdownContents)>
              </div>
            </div>
          </Portal>
        </Overlay>
      </div>
    </Dropdownable>
  </div>
</NonMenuDropdown>
`;

exports[`Dropdown renders a dropdown with a max width and max height 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-8 {
  display: inline-block;
}

.emotion-3:focus {
  outline: none;
}

.emotion-5 {
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  z-index: 2;
  top: 0px;
  left: 0px;
}

.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-0 > div:focus {
  outline: none;
}

.emotion-0:focus > div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio:0) {
  .emotion-0:focus > div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

.emotion-2 {
  padding: 16px;
}

.emotion-1 {
  background-repeat: no-repeat;
  padding: 16px;
}

.emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
}

<NonMenuDropdown
  data-cy="nonMenuDropdown"
  maxHeight={50}
  maxWidth={50}
  trigger="Dropdown trigger"
>
  <div
    className="emotion-8"
  >
    <Dropdownable
      dropdown={
        <Popover
          data-cy="nonMenuDropdown"
          id="dropdown3"
          maxHeight={50}
          maxWidth={50}
          role="dialog"
        >
          <FocusLockCombination
            disabled={true}
          >
            <div
              className="emotion-3"
              tabIndex={-1}
            >
              <SpacingBox
                side="all"
                spacingSize="m"
                tag="div"
              >
                <div>
                  dropdown content
                </div>
              </SpacingBox>
            </div>
          </FocusLockCombination>
        </Popover>
      }
      open={false}
      preferredDirections={
        Array [
          "bottom-left",
          "bottom-right",
          "top-right",
          "top-left",
        ]
      }
    >
      <div
        className="emotion-7"
      >
        <div>
          <ResetButton
            aria-expanded={false}
            aria-owns="dropdown3"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-owns="dropdown3"
              className="emotion-0"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <div
                tabIndex={-1}
              >
                Dropdown trigger
              </div>
            </button>
          </ResetButton>
        </div>
        <Overlay
          className="emotion-5"
          overlayRoot={
            <body>
              <div>
                <div
                  class="emotion-5"
                >
                  <div
                    class=""
                  >
                    <div
                      class="css-v92gwc"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown1"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="css-9idtg8"
                >
                  <div
                    class=""
                  >
                    <div
                      class="css-v92gwc"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown2"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="1"
                      />
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              .emotion-1:focus {
  outline: none;
}

.emotion-3 {
  opacity: 0;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  z-index: 2;
  top: 0px;
  left: 0px;
}

.emotion-0 {
  background-repeat: no-repeat;
  padding: 16px;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
}

<div>
                <div
                  class="emotion-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-2"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown3"
                      role="dialog"
                      style="max-height: 50px; max-width: 50px;"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-1"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-0"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="emotion-5"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-4"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown3"
                      role="dialog"
                      style="max-height: 50px; max-width: 50px;"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <div
              className="emotion-5"
            >
              <div
                className=""
              >
                <clickOutside(DropdownContents)
                  open={false}
                >
                  <DropdownContents
                    open={false}
                  >
                    <Popover
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown3"
                      maxHeight={50}
                      maxWidth={50}
                      role="dialog"
                    >
                      <div
                        className="emotion-4"
                        data-cy="nonMenuDropdown"
                        direction="bottom-left"
                        id="dropdown3"
                        role="dialog"
                        style={
                          Object {
                            "maxHeight": 50,
                            "maxWidth": 50,
                            "width": undefined,
                          }
                        }
                      >
                        <FocusLockCombination
                          disabled={true}
                        >
                          <FocusLock
                            as="div"
                            autoFocus={true}
                            disabled={true}
                            lockProps={Object {}}
                            noFocusGuards={false}
                            persistentFocus={false}
                            returnFocus={false}
                            sideCar={[Function]}
                          >
                            <div
                              data-focus-guard={true}
                              key="guard-first"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                            <div
                              data-focus-guard={true}
                              key="guard-nearest"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                            <div
                              data-focus-lock-disabled="disabled"
                              onBlur={[Function]}
                              onFocus={[Function]}
                            >
                              <div
                                className="emotion-3"
                                tabIndex={-1}
                              >
                                <SpacingBox
                                  side="all"
                                  spacingSize="m"
                                  tag="div"
                                >
                                  <Box
                                    bgImageOptions={
                                      Object {
                                        "position": undefined,
                                        "repeat": undefined,
                                        "size": undefined,
                                      }
                                    }
                                    className="emotion-2"
                                    dataCy="spacingBox"
                                    tag="div"
                                  >
                                    <div
                                      className="emotion-1"
                                      data-cy="spacingBox"
                                    >
                                      <div>
                                        dropdown content
                                      </div>
                                    </div>
                                  </Box>
                                </SpacingBox>
                              </div>
                            </div>
                            <div
                              data-focus-guard={true}
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={-1}
                            />
                          </FocusLock>
                        </FocusLockCombination>
                      </div>
                    </Popover>
                  </DropdownContents>
                </clickOutside(DropdownContents)>
              </div>
            </div>
          </Portal>
        </Overlay>
      </div>
    </Dropdownable>
  </div>
</NonMenuDropdown>
`;

exports[`Dropdown renders an open dropdown 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-8 {
  display: inline-block;
}

.emotion-3:focus {
  outline: none;
}

.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  cursor: pointer;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-0 > div:focus {
  outline: none;
}

.emotion-0:focus > div {
  outline-color: Highlight;
  outline-width: thin;
}

@media (-webkit-min-device-pixel-ratio:0) {
  .emotion-0:focus > div {
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: unset;
  }
}

.emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-2 {
  padding: 16px;
}

.emotion-1 {
  background-repeat: no-repeat;
  padding: 16px;
}

.emotion-5 {
  opacity: 1;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  z-index: 2;
  top: 0px;
  left: 0px;
}

<NonMenuDropdown
  data-cy="nonMenuDropdown"
  initialIsOpen={true}
  trigger="Dropdown trigger"
>
  <div
    className="emotion-8"
  >
    <Dropdownable
      dropdown={
        <Popover
          data-cy="nonMenuDropdown"
          id="dropdown2"
          role="dialog"
        >
          <FocusLockCombination
            disabled={false}
          >
            <div
              className="emotion-3"
              tabIndex={-1}
            >
              <SpacingBox
                side="all"
                spacingSize="m"
                tag="div"
              >
                <div>
                  dropdown content
                </div>
              </SpacingBox>
            </div>
          </FocusLockCombination>
        </Popover>
      }
      open={true}
      preferredDirections={
        Array [
          "bottom-left",
          "bottom-right",
          "top-right",
          "top-left",
        ]
      }
    >
      <div
        className="emotion-7"
      >
        <div>
          <ResetButton
            aria-expanded={true}
            aria-owns="dropdown2"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={true}
              aria-owns="dropdown2"
              className="emotion-0"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <div
                tabIndex={-1}
              >
                Dropdown trigger
              </div>
            </button>
          </ResetButton>
        </div>
        <Overlay
          className="emotion-5"
          overlayRoot={
            <body>
              <div>
                <div
                  class="css-p0rea1"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-4"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown1"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                      <div
                        data-focus-lock-disabled="disabled"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              .emotion-1:focus {
  outline: none;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  background-repeat: no-repeat;
  padding: 16px;
}

.emotion-3 {
  opacity: 1;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  z-index: 2;
  top: 0px;
  left: 0px;
}

<div>
                <div
                  class="emotion-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-2"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown2"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="1"
                      />
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          class="emotion-1"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-0"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="emotion-5"
                >
                  <div
                    class=""
                  >
                    <div
                      class="emotion-4"
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown2"
                      role="dialog"
                    >
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="1"
                      />
                      <div
                        data-focus-lock-disabled="false"
                      >
                        <div
                          class="emotion-3"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                            data-cy="spacingBox"
                          >
                            <div>
                              dropdown content
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-focus-guard="true"
                        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <div
              className="emotion-5"
            >
              <div
                className=""
              >
                <clickOutside(DropdownContents)
                  open={true}
                >
                  <DropdownContents
                    open={true}
                  >
                    <Popover
                      data-cy="nonMenuDropdown"
                      direction="bottom-left"
                      id="dropdown2"
                      role="dialog"
                    >
                      <div
                        className="emotion-4"
                        data-cy="nonMenuDropdown"
                        direction="bottom-left"
                        id="dropdown2"
                        role="dialog"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <FocusLockCombination
                          disabled={false}
                        >
                          <FocusLock
                            as="div"
                            autoFocus={true}
                            disabled={false}
                            lockProps={Object {}}
                            noFocusGuards={false}
                            persistentFocus={false}
                            returnFocus={false}
                            sideCar={[Function]}
                          >
                            <div
                              data-focus-guard={true}
                              key="guard-first"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={0}
                            />
                            <div
                              data-focus-guard={true}
                              key="guard-nearest"
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={1}
                            />
                            <div
                              data-focus-lock-disabled={false}
                              onBlur={[Function]}
                              onFocus={[Function]}
                            >
                              <SideEffect(FocusWatcher)
                                autoFocus={true}
                                disabled={false}
                                observed={
                                  <div
                                    data-focus-lock-disabled="false"
                                  >
                                    <div
                                      class="emotion-3"
                                      tabindex="-1"
                                    >
                                      <div
                                        class="emotion-1"
                                        data-cy="spacingBox"
                                      >
                                        <div>
                                          dropdown content
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                }
                                onActivation={[Function]}
                                onDeactivation={[Function]}
                                persistentFocus={false}
                                returnFocus={[Function]}
                                shards={Array []}
                                sideCar={
                                  Object {
                                    "assignMedium": [Function],
                                    "assignSyncMedium": [Function],
                                    "options": Object {
                                      "async": true,
                                      "ssr": false,
                                    },
                                    "read": [Function],
                                    "useMedium": [Function],
                                  }
                                }
                              >
                                <FocusWatcher
                                  autoFocus={true}
                                  disabled={false}
                                  observed={
                                    <div
                                      data-focus-lock-disabled="false"
                                    >
                                      <div
                                        class="emotion-3"
                                        tabindex="-1"
                                      >
                                        <div
                                          class="emotion-1"
                                          data-cy="spacingBox"
                                        >
                                          <div>
                                            dropdown content
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  }
                                  onActivation={[Function]}
                                  onDeactivation={[Function]}
                                  persistentFocus={false}
                                  returnFocus={[Function]}
                                  shards={Array []}
                                  sideCar={
                                    Object {
                                      "assignMedium": [Function],
                                      "assignSyncMedium": [Function],
                                      "options": Object {
                                        "async": true,
                                        "ssr": false,
                                      },
                                      "read": [Function],
                                      "useMedium": [Function],
                                    }
                                  }
                                />
                              </SideEffect(FocusWatcher)>
                              <div
                                className="emotion-3"
                                tabIndex={-1}
                              >
                                <SpacingBox
                                  side="all"
                                  spacingSize="m"
                                  tag="div"
                                >
                                  <Box
                                    bgImageOptions={
                                      Object {
                                        "position": undefined,
                                        "repeat": undefined,
                                        "size": undefined,
                                      }
                                    }
                                    className="emotion-2"
                                    dataCy="spacingBox"
                                    tag="div"
                                  >
                                    <div
                                      className="emotion-1"
                                      data-cy="spacingBox"
                                    >
                                      <div>
                                        dropdown content
                                      </div>
                                    </div>
                                  </Box>
                                </SpacingBox>
                              </div>
                            </div>
                            <div
                              data-focus-guard={true}
                              style={
                                Object {
                                  "height": "0px",
                                  "left": "1px",
                                  "overflow": "hidden",
                                  "padding": 0,
                                  "position": "fixed",
                                  "top": "1px",
                                  "width": "1px",
                                }
                              }
                              tabIndex={0}
                            />
                          </FocusLock>
                        </FocusLockCombination>
                      </div>
                    </Popover>
                  </DropdownContents>
                </clickOutside(DropdownContents)>
              </div>
            </div>
          </Portal>
        </Overlay>
      </div>
    </Dropdownable>
  </div>
</NonMenuDropdown>
`;
